site: fix scrolling on ios safari (#975)
* site: fix scrolling on ios safari

this revealed a bunch of larger a11y issues with the modal,
which i fixed as well

fixes https://github.com/tilt-dev/tilt.build/issues/970

* response to comments

--- a/src/_sass/enterprise.scss
+++ b/src/_sass/enterprise.scss
@@ -60,6 +60,7 @@
   height: 600px;
   @include shadow-small;
   border-radius: $tilt2-border-radius-large;
+  margin-top: 28px;
 
   @include mobileAndAbove {
     width: 320px;
